Fix scrollbar corner

--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,10 @@
   color: var(--contrast);
 }
 
-*::-webkit-scrollbar {width: 20px;}
-*::-webkit-scrollbar-track {background: var(--primary);}
+*::-webkit-scrollbar {width: 20px; height: 20px;}
+*::-webkit-scrollbar-track {background-color: var(--primary);}
 *::-webkit-scrollbar-thumb {background-color: var(--tertiary); border-radius: 0px; border: 5px solid var(--primary);}
+*::-webkit-scrollbar-corner {background-color: var(--tertiary);}
 
 .lite {
   --primary: #DDD;
